@@ -1,5 +1,10 @@
 2012-08-16  Mark Wielaard  <mark@klomp.org>
 
+	* Makefile.am (add-zero.stamp): Setup drops directory by symlinking.
+	(add-zero-debug.stamp): Likewise.
+
+2012-08-16  Mark Wielaard  <mark@klomp.org>
+
 	* Makefile.am (stamps/add-nss.stamp): Only try patching the
 	security files if they actually exist.
 
